fix: scrollbar css issue

--- a/src/scss/components/_scrollbar.scss
+++ b/src/scss/components/_scrollbar.scss
@@ -1,22 +1,22 @@
-&::-webkit-scrollbar {
+::-webkit-scrollbar {
   background-color: $white;
   width: 10px;
 }
 
 /* background of the scrollbar except button or resizer */
-&::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background-color: $white;
 }
 
 /* scrollbar itself */
-&::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
   border: 4px solid $white;
 }
 
 /* set button(top and bottom of the scrollbar) */
-&::-webkit-scrollbar-button {
+::-webkit-scrollbar-button {
   display: none;
 }
 
